syntax = "proto3";
package trail.comment;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

/* Message associated to a comment thread. */
message CommentMessage {
  google.protobuf.StringValue id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  google.protobuf.StringValue comment_thread_id = 5;
  google.protobuf.StringValue created_by = 6;
  google.protobuf.StringValue text = 7;
}
